--- a/src/app/maravillas/maravillas-detail/maravillas-detail.component.html
+++ b/src/app/maravillas/maravillas-detail/maravillas-detail.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src={{maravillaDetail.image}] alt="Card image cap">
+  <img class="card-img-top" src={{maravillaDetail.image}} alt="Card image cap">
   <div class="card-body">
     <h5 class="card-title">{{maravillaDetail.name}}</h5>
     <p class="card-text">{{maravillaDetail.description}}</p>
